assignment/assignment1/submit/.antlr/BKITParser.py
# Generated from /home/ngoctho/Documents/PPL/assignment/assignment1/submit/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'Body'", "'Else'", "'EndFor'", 
                     "'If'", "'Var'", "'EndDo'", "'Break'", "'ElseIf'", 
                     "'EndWhile'", "'Parameter'", "'While'", "'Continue'", 
                     "'EndBody'", "'For'", "'Return'", "'True'", "'Do'", 
                     "'EndIf'", "'Function'", "'Then'", "'False'", "'+'", 
                     "'-'", "'*'", "'%'", "'\\'", "'-.'", "'\\.'", "'+.'", 
                     "'*.'", "'!'", "'||'", "'&&'", "'=='", "'<='", "'>.'", 
                     "'!='", "'>='", "'<=.'", "'<'", "'=/='", "'>=.'", "'>'", 
                     "'<.'", "'('", "')'", "'['", "']'", "':'", "'.'", "','", 
                     "';'", "'{'", "'}'", "'='" ]

    symbolicNames = [ "<INVALID>", "Identifier", "BODY", "ELSE", "ENDFOR", 
                      "IF", "VAR", "ENDDO", "BREAK", "ELSEIF", "ENDWHILE", 
                      "PARAMETER", "WHILE", "CONTINUE", "ENDBODY", "FOR", 
                      "RETURN", "TRUE", "DO", "ENDIF", "FUNCTION", "THEN", 
                      "FALSE", "ADD", "SUB", "MUL", "MOD", "DIV", "SUBF", 
                      "DIVF", "ADDF", "MULF", "NOT", "OR", "AND", "EQ", 
                      "LE", "GTF", "NE", "GE", "LEF", "LT", "NEF", "GEF", 
                      "GT", "LTF", "LB", "RB", "LSB", "RSB", "COLON", "DOT", 
                      "COMMA", "SEMI", "LP", "RP", "ASSIGN", "IntegerConstant", 
                      "FloatingConstant", "String", "COMMENT", "WS", "UNTERMINATED_COMMENT", 
                      "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_funcDeclaration = 1
    RULE_paraList = 2
    RULE_parameters = 3
    RULE_funcBody = 4
    RULE_expression = 5
    RULE_logicalOrAndExpression = 6
    RULE_additiveExpression = 7
    RULE_multiplicativeExpression = 8
    RULE_logicalNotExpression = 9
    RULE_signExpression = 10
    RULE_indexExpression = 11
    RULE_funcExpression = 12
    RULE_primaryExpression = 13
    RULE_additiveOperator = 14
    RULE_multiplicativeOperator = 15
    RULE_logicalOrAndOperator = 16
    RULE_logicalNotOperator = 17
    RULE_relationalOperator = 18
    RULE_signOperator = 19
    RULE_assignmentOperator = 20
    RULE_indexOperator = 21
    RULE_functionCall = 22
    RULE_argumentList = 23
    RULE_statement = 24
    RULE_statementList = 25
    RULE_expressionStatement = 26
    RULE_variableStatement = 27
    RULE_varList = 28
    RULE_varDeclaration = 29
    RULE_assignmentStatement = 30
    RULE_assignDeclaration = 31
    RULE_ifStatement = 32
    RULE_iterationStatement = 33
    RULE_forStatement = 34
    RULE_forCondition = 35
    RULE_forDeclaration = 36
    RULE_conditionExpr = 37
    RULE_updateExpr = 38
    RULE_whileStatement = 39
    RULE_doWhileStatement = 40
    RULE_jumpStatement = 41
    RULE_breakStatement = 42
    RULE_continueStatement = 43
    RULE_callStatement = 44
    RULE_returnStatement = 45
    RULE_literals = 46
    RULE_boolean = 47
    RULE_array = 48

    ruleNames =  [ "program", "funcDeclaration", "paraList", "parameters", 
                   "funcBody", "expression", "logicalOrAndExpression", "additiveExpression", 
                   "multiplicativeExpression", "logicalNotExpression", "signExpression", 
                   "indexExpression", "funcExpression", "primaryExpression", 
                   "additiveOperator", "multiplicativeOperator", "logicalOrAndOperator", 
                   "logicalNotOperator", "relationalOperator", "signOperator", 
                   "assignmentOperator", "indexOperator", "functionCall", 
                   "argumentList", "statement", "statementList", "expressionStatement", 
                   "variableStatement", "varList", "varDeclaration", "assignmentStatement", 
                   "assignDeclaration", "ifStatement", "iterationStatement", 
                   "forStatement", "forCondition", "forDeclaration", "conditionExpr", 
                   "updateExpr", "whileStatement", "doWhileStatement", "jumpStatement", 
                   "breakStatement", "continueStatement", "callStatement", 
                   "returnStatement", "literals", "boolean", "array" ]

    EOF = Token.EOF
    Identifier=1
    BODY=2
    ELSE=3
    ENDFOR=4
    IF=5
    VAR=6
    ENDDO=7
    BREAK=8
    ELSEIF=9
    ENDWHILE=10
    PARAMETER=11
    WHILE=12
    CONTINUE=13
    ENDBODY=14
    FOR=15
    RETURN=16
    TRUE=17
    DO=18
    ENDIF=19
    FUNCTION=20
    THEN=21
    FALSE=22
    ADD=23
    SUB=24
    MUL=25
    MOD=26
    DIV=27
    SUBF=28
    DIVF=29
    ADDF=30
    MULF=31
    NOT=32
    OR=33
    AND=34
    EQ=35
    LE=36
    GTF=37
    NE=38
    GE=39
    LEF=40
    LT=41
    NEF=42
    GEF=43
    GT=44
    LTF=45
    LB=46
    RB=47
    LSB=48
    RSB=49
    COLON=50
    DOT=51
    COMMA=52
    SEMI=53
    LP=54
    RP=55
    ASSIGN=56
    IntegerConstant=57
    FloatingConstant=58
    String=59
    COMMENT=60
    WS=61
    UNTERMINATED_COMMENT=62
    UNCLOSE_STRING=63
    ILLEGAL_ESCAPE=64
    ERROR_CHAR=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BKITParser.EOF, 0)

        def variableStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.VariableStatementContext)
            else:
                return self.getTypedRuleContext(BKITParser.VariableStatementContext,i)


        def funcDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.FuncDeclarationContext)
            else:
                return self.getTypedRuleContext(BKITParser.FuncDeclarationContext,i)


        def getRuleIndex(self):
            return BKITParser.RULE_program




    def program(self):

        localctx = BKITParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.VAR:
                self.state = 98
                self.variableStatement()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.FUNCTION:
                self.state = 104
                self.funcDeclaration()
                self.state = 109
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 110
            self.match(BKITParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(BKITParser.FUNCTION, 0)

        def COLON(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COLON)
            else:
                return self.getToken(BKITParser.COLON, i)

        def Identifier(self):
            return self.getToken(BKITParser.Identifier, 0)

        def funcBody(self):
            return self.getTypedRuleContext(BKITParser.FuncBodyContext,0)


        def PARAMETER(self):
            return self.getToken(BKITParser.PARAMETER, 0)

        def paraList(self):
            return self.getTypedRuleContext(BKITParser.ParaListContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_funcDeclaration




    def funcDeclaration(self):

        localctx = BKITParser.FuncDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_funcDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.match(BKITParser.FUNCTION)
            self.state = 113
            self.match(BKITParser.COLON)
            self.state = 114
            self.match(BKITParser.Identifier)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.PARAMETER:
                self.state = 115
                self.match(BKITParser.PARAMETER)
                self.state = 116
                self.match(BKITParser.COLON)
                self.state = 117
                self.paraList()


            self.state = 120
            self.funcBody()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParaListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def parameters(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.ParametersContext)
            else:
                return self.getTypedRuleContext(BKITParser.ParametersContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_paraList




    def paraList(self):

        localctx = BKITParser.ParaListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_paraList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.parameters()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.COMMA:
                self.state = 123
                self.match(BKITParser.COMMA)
                self.state = 124
                self.parameters()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParametersContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(BKITParser.Identifier, 0)

        def LSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.LSB)
            else:
                return self.getToken(BKITParser.LSB, i)

        def IntegerConstant(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.IntegerConstant)
            else:
                return self.getToken(BKITParser.IntegerConstant, i)

        def RSB(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.RSB)
            else:
                return self.getToken(BKITParser.RSB, i)

        def getRuleIndex(self):
            return BKITParser.RULE_parameters




    def parameters(self):

        localctx = BKITParser.ParametersContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_parameters)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(BKITParser.Identifier)
            self.state = 136
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==BKITParser.LSB:
                self.state = 131
                self.match(BKITParser.LSB)
                self.state = 132
                self.match(BKITParser.IntegerConstant)
                self.state = 133
                self.match(BKITParser.RSB)
                self.state = 138
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BODY(self):
            return self.getToken(BKITParser.BODY, 0)

        def COLON(self):
            return self.getToken(BKITParser.COLON, 0)

        def statementList(self):
            return self.getTypedRuleContext(BKITParser.StatementListContext,0)


        def ENDBODY(self):
            return self.getToken(BKITParser.ENDBODY, 0)

        def DOT(self):
            return self.getToken(BKITParser.DOT, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_funcBody




    def funcBody(self):

        localctx = BKITParser.FuncBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_funcBody)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 139
            self.match(BKITParser.BODY)
            self.state = 140
            self.match(BKITParser.COLON)
            self.state = 141
            self.statementList()
            self.state = 142
            self.match(BKITParser.ENDBODY)
            self.state = 143
            self.match(BKITParser.DOT)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalOrAndExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.LogicalOrAndExpressionContext)
            else:
                return self.getTypedRuleContext(BKITParser.LogicalOrAndExpressionContext,i)


        def relationalOperator(self):
            return self.getTypedRuleContext(BKITParser.RelationalOperatorContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expression




    def expression(self):

        localctx = BKITParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_expression)
        try:
            self.state = 150
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.logicalOrAndExpression(0)
                self.state = 146
                self.relationalOperator()
                self.state = 147
                self.logicalOrAndExpression(0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 149
                self.logicalOrAndExpression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LogicalOrAndExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpression(self):
            return self.getTypedRuleContext(BKITParser.AdditiveExpressionContext,0)


        def logicalOrAndExpression(self):
            return self.getTypedRuleContext(BKITParser.LogicalOrAndExpressionContext,0)


        def logicalOrAndOperator(self):
            return self.getTypedRuleContext(BKITParser.LogicalOrAndOperatorContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_logicalOrAndExpression



    def logicalOrAndExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.LogicalOrAndExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_logicalOrAndExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.additiveExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 161
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.LogicalOrAndExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_logicalOrAndExpression)
                    self.state = 155
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 156
                    self.logicalOrAndOperator()
                    self.state = 157
                    self.additiveExpression(0) 
                self.state = 163
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class AdditiveExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpression(self):
            return self.getTypedRuleContext(BKITParser.MultiplicativeExpressionContext,0)


        def additiveExpression(self):
            return self.getTypedRuleContext(BKITParser.AdditiveExpressionContext,0)


        def additiveOperator(self):
            return self.getTypedRuleContext(BKITParser.AdditiveOperatorContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_additiveExpression



    def additiveExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.AdditiveExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 14
        self.enterRecursionRule(localctx, 14, self.RULE_additiveExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.multiplicativeExpression(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 173
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.AdditiveExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_additiveExpression)
                    self.state = 167
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 168
                    self.additiveOperator()
                    self.state = 169
                    self.multiplicativeExpression(0) 
                self.state = 175
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class MultiplicativeExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalNotExpression(self):
            return self.getTypedRuleContext(BKITParser.LogicalNotExpressionContext,0)


        def multiplicativeExpression(self):
            return self.getTypedRuleContext(BKITParser.MultiplicativeExpressionContext,0)


        def multiplicativeOperator(self):
            return self.getTypedRuleContext(BKITParser.MultiplicativeOperatorContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_multiplicativeExpression



    def multiplicativeExpression(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.MultiplicativeExpressionContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_multiplicativeExpression, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 177
            self.logicalNotExpression()
            self._ctx.stop = self._input.LT(-1)
            self.state = 185
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.MultiplicativeExpressionContext(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_multiplicativeExpression)
                    self.state = 179
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                    self.state = 180
                    self.multiplicativeOperator()
                    self.state = 181
                    self.logicalNotExpression() 
                self.state = 187
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class LogicalNotExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logicalNotOperator(self):
            return self.getTypedRuleContext(BKITParser.LogicalNotOperatorContext,0)


        def logicalNotExpression(self):
            return self.getTypedRuleContext(BKITParser.LogicalNotExpressionContext,0)


        def signExpression(self):
            return self.getTypedRuleContext(BKITParser.SignExpressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_logicalNotExpression




    def logicalNotExpression(self):

        localctx = BKITParser.LogicalNotExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_logicalNotExpression)
        try:
            self.state = 192
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.NOT]:
                self.enterOuterAlt(localctx, 1)
                self.state = 188
                self.logicalNotOperator()
                self.state = 189
                self.logicalNotExpression()
                pass
            elif token in [BKITParser.Identifier, BKITParser.TRUE, BKITParser.FALSE, BKITParser.SUB, BKITParser.SUBF, BKITParser.LB, BKITParser.LP, BKITParser.IntegerConstant, BKITParser.FloatingConstant, BKITParser.String]:
                self.enterOuterAlt(localctx, 2)
                self.state = 191
                self.signExpression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SignExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def signOperator(self):
            return self.getTypedRuleContext(BKITParser.SignOperatorContext,0)


        def signExpression(self):
            return self.getTypedRuleContext(BKITParser.SignExpressionContext,0)


        def indexExpression(self):
            return self.getTypedRuleContext(BKITParser.IndexExpressionContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_signExpression




    def signExpression(self):

        localctx = BKITParser.SignExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_signExpression)
        try:
            self.state = 198
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.SUB, BKITParser.SUBF]:
                self.enterOuterAlt(localctx, 1)
                self.state = 194
                self.signOperator()
                self.state = 195
                self.signExpression()
                pass
            elif token in [BKITParser.Identifier, BKITParser.TRUE, BKITParser.FALSE, BKITParser.LB, BKITParser.LP, BKITParser.IntegerConstant, BKITParser.FloatingConstant, BKITParser.String]:
                self.enterOuterAlt(localctx, 2)
                self.state = 197
                self.indexExpression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IndexExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcExpression(self):
            return self.getTypedRuleContext(BKITParser.FuncExpressionContext,0)


        def indexExpression(self):
            return self.getTypedRuleContext(BKITParser.IndexExpressionContext,0)


        def indexOperator(self):
            return self.getTypedRuleContext(BKITParser.IndexOperatorContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_indexExpression


